Fix detail page map overlap in shared card layout

--- a/brit/static/scss/components/_cards.scss
+++ b/brit/static/scss/components/_cards.scss
@@ -26,3 +26,25 @@
     }
   }
 }
+
+.detail-layout-card {
+  isolation: isolate;
+
+  .card-header,
+  .card-body,
+  .card-footer {
+    position: relative;
+    z-index: 1;
+  }
+
+  .card-img-top {
+    position: relative;
+    overflow: hidden;
+    z-index: 0;
+  }
+
+  .card-img-top .leaflet-container {
+    position: relative;
+    z-index: 0;
+  }
+}
